--- a/blocks/placeholders/author.css
+++ b/blocks/placeholders/author.css
@@ -1,14 +1,11 @@
-.countries table, th {
+table th {
     border: 1px solid black;
     background-color:cornflowerblue;
 }
-.countries table, td {
+table td {
     border: 1px solid black;
     background-color:aliceblue;
 }
-
-.countries .region-select>select{
-    width: 40%;
-    font-size: large;
+.table-heading{
+    text-align: center;
 }
-
